[package]
name = "sweeten"
version = "0.14.0-dev"
edition = "2021"
authors = ["Andy Terra <spam@andyterra.com>"]
description = "`sweeten` your daily `iced` brew"
license = "MIT"
repository = "https://github.com/airstrike/sweeten"
keywords = ["gui", "iced", "widgets"]
categories = ["gui"]
readme = "README.md"

[dependencies]
iced.git = "https://github.com/iced-rs/iced.git"
iced.branch = "master"
iced.features = ["advanced"]
