[package]
name = "sweeten"
version = "0.2.0"
edition = "2021"
authors = ["Andy Terra <spam@andyterra.com>"]
description = "`sweeten` your daily `iced` brew"
license = "MIT"
repository = "https://github.com/airstrike/sweeten"
keywords = ["gui", "iced", "widgets"]
categories = ["gui"]
readme = "README.md"

[dependencies]
iced = { git = "https://github.com/airstrike/iced.git", branch = "latest", features = [
    "advanced",
    "image",
    "canvas",
] }

[dev-dependencies]
iced = { git = "https://github.com/airstrike/iced.git", branch = "latest", features = [
    "advanced",
    "debug",
    "image",
    "canvas",
] }
rand = "0.8.5"
